# cluster_newton

./: CMakeLists.txt  README.md  cmake-set-dependencies.cmake  main.cpp
0001.0023/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cluster_newton.sln  cluster_newton.vcxproj  cluster_newton.vcxproj.filters  cmake_install.cmake
0001.0023/Debug/: cluster_newton.ilk
0001.0023/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
0001.0023/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
0001.0023/cluster_newton.dir/Debug/cluster_newton.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cluster_newton.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lapack/: blaswrap.h  f2c.h
matrix/: CMakeLists.txt  main.cpp
matrix/copasi/: copasi.h
matrix/copasi/utilities/: CMatrix.h  CVector.h
